--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1031,7 +1031,7 @@
     "Instagram" : "إنستغرام",
     "CV"    : "السيرة الذاتية",
     "Optional" : "إختياري",
-    "Paintings and artworks" : "لوحات وأعمال الفنية",
+    "Paintings and artworks" : "لوحات وأعمال فنية",
     "Add Artwork" : "عمل فني جديد",
     "Edit Artwork" : "تعديل عمل فني",
     "Artworks" : "الأعمال الفنية",
@@ -1060,5 +1060,21 @@
     "Show all artworks" : "عرض جميع اللوحات",
     "Blog" : "المدونة",
     "This artist didn't post any artwork yet" : "هذا الفنان لم ينشر أي عمل فني بعد",
-    "You didn't post any artwork yet" : "لم تقم بنشر أي عمل فني"
+    "You didn't post any artwork yet" : "لم تقم بنشر أي عمل فني",
+    "Sponsors": "الرعاة",
+    "Sponsor name": "إسم الراعي",
+    "Add Sponsor" : "إضافة راعي",
+    "Edit Sposnor" : "تعديل الراعي",
+    "Logo" : "الشعار",
+    "Website url" : "رابط الموقع",
+    "Exhibitions": "المعارض والملتقيات",
+    "Add Exhibition" : "معرض جديد",
+    "Edit Exhibition" : "تعديل معلومات المعرض",
+    "Exhibition name" : "إسم المعرض",
+    "From date" : "من تاريخ",
+    "To date" : "إلى تاريخ",
+    "Registration url" : "رابط التسجيل",
+    "Sponsor" : "الراعي",
+    "Select Sponsor" : "إختر الراعي",
+    "Artwork location" : "مكان تواجد اللوحة"
 }
