--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1112,5 +1112,7 @@
     "Blog Body" : "محتوى التدوينة",
     "Store address" : "عنوان المتجر",
     "Store name" : "إسم المتجر",
-    "Store Registration" : "تسجيل متجر متخصص"
+    "Store Registration" : "تسجيل متجر متخصص",
+    "New messages" : "الرسائل الجديدة",
+    "Notifications" : "الإشعارات"
 }
