--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1114,5 +1114,7 @@
     "Store name" : "إسم المتجر",
     "Store Registration" : "تسجيل متجر متخصص",
     "New messages" : "الرسائل الجديدة",
-    "Notifications" : "الإشعارات"
+    "Notifications" : "الإشعارات",
+    "You didn't post any blog yet" : "لم تقم بنشر أي تدوينة بعد",
+    "This artist didn't post any blog yet" : "هذا الفنان ليس لديه أي تدوينة بعد"
 }
