--- a/lang/ar.json
+++ b/lang/ar.json
@@ -685,7 +685,7 @@
     "Resume Subscription": "استئناف الاشتراك",
     "Return to :appName": "العودة إلى :appName",
     "Reunion": "روينيون",
-    "Role": "صلاحية",
+    "Role": "الدور",
     "Romania": "رومانيا",
     "Run Action": "تنفيذ الإجراء",
     "Russian Federation": "روسيا",
@@ -1147,5 +1147,21 @@
     "The new password must be different from the current one" : "كلمة المرور الجديدة يجب أن تكون مختلفة عن الحالية",
     "Password changed successfully" : "تم تغيير كلمة المرور بنجاح",
     "Artist Profile" : "ملف الفنان",
-    "Artwork Messages" : "رسائل العمل الفني"
+    "Artwork Messages" : "رسائل العمل الفني",
+    "My account" : "حسابي",
+    "Website Settings" : "إعدادات الموقع",
+    "Subscriptions Management" : "إدارة الإشتراكات",
+    "Review" : "مراجعة",
+    "Avatar" : "صورة الملف الشخصي",
+    "Subscriber information" : "بيانات المشترك",
+    "Account type" : "نوع الحساب",
+    "Artist account" : "حساب فنان",
+    "Store account" : "حساب متجر متخصص",
+    "Registration date" : "تاريخ التسجيل",
+    "Subscription and payment information" : "بيانات الإشتراك والدفع",
+    "Decline Payment" : "رفض عملية الدفع",
+    "Are you sure you want to confirm this payment?" : "هل أنت متأكد من تأكيد عملية الدفع هذه؟",
+    "Are you sure you want to decline this payment?" : "هل أنت متأكد من رفض عملية الدفع هذه؟",
+    "Payment confirmed successfully" : "تم تأكيد عملية الدفع بنجاح",
+    "Payment declined successfully" : "تم رفض عملية الدفع بنجاح"
 }
