--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1172,5 +1172,6 @@
     "Are you sure you want to reset default settings?" : "هل أنت متأكد من أنك تريد إسترجاع الإعدادات الإفتراضية؟",
     "Default settings has been reseted successfully" : "تم إسترجاع الإعدادات الإفتراضية بنجاح",
     "General Settings" : "الإعدادات العامة",
-    "Review Payment" : "مراجعة عملية الدفع"
+    "Review Payment" : "مراجعة عملية الدفع",
+    "Renew" : "تجديد"
 }
