--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1177,5 +1177,26 @@
     "Painting type" : "نوع اللوحة",
     "Without sponsor" : "بدون راعي",
     "Show email on profile" : "عرض البريد الإلكتروني في الملف الشخصي",
-    "Show phone on profile" : "عرض رقم الهاتف في الملف الشخصي"
+    "Show phone on profile" : "عرض رقم الهاتف في الملف الشخصي",
+    "Open a support ticket"  : "فتح تذكرة دعم",
+    "Ticket number" : "رقم التذكرة",
+    "Creation date" : "تاريخ الإنشاء",
+    "Last person to intervene" : "آخر من تفاعل",
+    "Last update" : "آخر تحديث",
+    "Subject" : "الموضوع",
+    "Status" : "الحالة",
+    "Ticket subject" : "موضوع التذكرة",
+    "Fanart Support" : "دعم فن أرت",
+    "You" : "أنت",
+    "Opened" : "مفتوحة",
+    "Support tickets" : "تذاكر الدعم",
+    "Back to Support tickets" : "الرجوع لتذاكر الدعم",
+    "Support ticket information" : "معلومات تذكرة الدعم",
+    "Messages" : "الرسائل",
+    "From" : "من",
+    "Sender" : "المرسل",
+    "Close ticket" : "إغلاق التذكرة",
+    "Do you really want to close this support ticket?" : "هل أنت متأكد من إغلاق تذكرة الدعم هذه؟",
+    "This support ticket has been closed successfully" : "تم إغلاق تذكرة الدعم هذه بنجاح",
+    "Closed" : "مغلقة"
 }
