--- a/lang/ar.json
+++ b/lang/ar.json
@@ -991,7 +991,7 @@
     "News Body" : "محتوى الخبر",
     "News Image" : "صورة الخبر",
     "Home" : "الرئيسية",
-    "Artists" : "الفنانين",
+    "Artists" : "الفنانين والخطاطين",
     "Paintings and artwork" : "اللوحات والأعمال الفنية",
     "Exhibitions and meetings" : "المعارض والملتقيات",
     "Stores" : "المتاجر المتخصصة",
@@ -1053,7 +1053,7 @@
     "SAR" : "ريال سعودي",
     "Select Nationality" : "إختر الجنسية",
     "Select Country" : "إختر البلد",
-    "Show all artists" : "عرض كل الفنانين",
+    "Show all artists" : "عرض كل الفنانين والخطاطين",
     "Joined us" : "إنضم لنا",
     "Renew subscription" : "تجديد الإشتراك",
     "Latest paintings and artworks" : "أحدث اللوحات والأعمال الفنية",
