--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1242,5 +1242,7 @@
     "You don't have any products yet" : "ليس لديك أي منتجات بعد",
     "There's no stores yet" : "لا يوجد متاجر متخصصة بعد",
     "Product Messages" : "رسائل المنتج",
-    "Latest products messages" : "آخر رسائل المنتجات"
+    "Latest products messages" : "آخر رسائل المنتجات",
+    "Contact store" : "تواصل مع التاجر",
+    "Send message to store" : "إرسال رسالة للمتجر"
 }
