--- a/lang/ar.json
+++ b/lang/ar.json
@@ -280,6 +280,7 @@
     "Barbados": "بربادوس",
     "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "قبل المتابعة، هل يمكنك التحقق من بريدك الإلكتروني بالضغط على الرابط الذي أرسلناه لك الآن عبر البريد الإلكتروني؟ إذا لم يصلك البريد الإلكتروني، فيسعدنا أن نرسل لك بريداً إلكترونياً غيره بكل سرور.",
     "Before proceeding, please check your email for a verification link.": "قبل المتابعة ، يرجى التحقق من بريدك الإلكتروني للحصول على رابط التحقق.",
+    "Please check your email for a verification link." : "يرجى التحقق من بريدك الإلكتروني للحصول على رابط التحقق.",
     "Belarus": "بيلاروس",
     "Belgium": "بلجيكا",
     "Belize": "بليز",
