--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1245,5 +1245,10 @@
     "Product Messages" : "رسائل المنتج",
     "Latest products messages" : "آخر رسائل المنتجات",
     "Contact store" : "تواصل مع التاجر",
-    "Send message to store" : "إرسال رسالة للمتجر"
+    "Send message to store" : "إرسال رسالة للمتجر",
+    "Artist type" : "تصنيف الفنان",
+    "artist" : "رسام",
+    "calligrapher" : "خطاط",
+    "Contact artists" : "مراسلة الفنانين",
+    "Whos_us Settings" : "إعدادات من نحن"
 }
