--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1250,5 +1250,6 @@
     "artist" : "رسام",
     "calligrapher" : "خطاط",
     "Contact artists" : "مراسلة الفنانين",
-    "Whos_us Settings" : "إعدادات من نحن"
+    "Whos_us Settings" : "إعدادات من نحن",
+    "Purchase url" : "رابط الشراء"
 }
