--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1251,5 +1251,6 @@
     "calligrapher" : "خطاط",
     "Contact artists" : "مراسلة الفنانين",
     "Whos_us Settings" : "إعدادات من نحن",
-    "Purchase url" : "رابط الشراء"
+    "Purchase url" : "رابط الشراء",
+    "Customer Registration" : "تسجيل مشتري"
 }
