--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1252,5 +1252,24 @@
     "Contact artists" : "مراسلة الفنانين",
     "Whos_us Settings" : "إعدادات من نحن",
     "Purchase url" : "رابط الشراء",
-    "Customer Registration" : "تسجيل مشتري"
+    "Customer Registration" : "تسجيل مشتري",
+    "Order buy artwork" : "طلب شراء العمل الفني",
+    "Payment confirmation picture" : "صورة تأكيد الدفع",
+    "Order" : "طلب",
+    "Order has been placed successfully" : "تم تقديم الطلب بنجاح",
+    "You already has been placed an order for this artwork!" : "لقد قمت بطلب هذه اللوحة من قبل",
+    "Artwork" : " العمل الفني",
+    "Canceled" : "ملغى",
+    "Denied" : "مرفوض",
+    "Awaiting confirmation" : "بإنتظار التاكيد",
+    "Awaiting payment confirmation" : "بإنتظار تأكيد الدفع",
+    "Awaiting payment" : "بإنتظار الدفع",
+    "Order Status" : "حالة الطلب",
+    "Orders" : "الطلبات",
+    "My Orders" : "طلباتي",
+    "Order Confirmed" : "طلبك قيد التجهيز",
+    "Order Shipped Out" : "تم شحن الطلب",
+    "Order Delivered" : "تم تسليم",
+    "Order date" : "تاريخ الطلب",
+    "Deny" : "رفض"
 }
